--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
   "require": {
     "php": ">=7.4.2",
     "ext-mbstring": "*",
+    "aeon-php/calendar": ">=0.11.0",
     "aeon-php/sleep": ">=0.5.0",
     "davedevelopment/stiphle": "^0.9.2"
   },
