--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,14 @@
   "require": {
     "php": ">=7.4.2",
     "ext-mbstring": "*",
+    "ext-json": "*",
     "aeon-php/calendar": ">=0.11.0",
     "aeon-php/sleep": ">=0.5.0",
-    "davedevelopment/stiphle": "^0.9.2"
+    "psr/cache": "^1.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^9.4"
+    "phpunit/phpunit": "^9.4",
+    "symfony/cache": "^5.1"
   },
   "config": {
     "optimize-autoloader": true,
