--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,11 @@
   "prefer-stable": true,
   "require": {
     "php": ">=7.4.2",
-    "ext-mbstring": "*",
     "ext-json": "*",
     "aeon-php/calendar": ">=0.11.0",
     "aeon-php/sleep": ">=0.5.0",
-    "psr/cache": "^1.0"
+    "psr/cache": "^1.0",
+    "symfony/polyfill-mbstring": "^1.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.4",
