--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,6 @@
     "symfony/polyfill-mbstring": "^1.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^9.4",
     "symfony/cache": "^5.1"
   },
   "config": {
@@ -40,7 +39,7 @@
       "@test:mutation"
     ],
     "test": [
-      "phpunit"
+      "tools/phpunit.phar"
     ],
     "test:mutation": [
       "tools/infection -j2"
