--- a/.gitattributes
+++ b/.gitattributes
@@ -4,7 +4,7 @@
 /.github/ export-ignore
 /docs export-ignore
 /tests export-ignore
-/.phive export-ignore
+/tools export-ignore
 /benchmark export-ignore
 /.gitattributes export-ignore
 /.gitignore export-ignore
