Changed custom workflows into aeon-php reusable workflows

--- a/.github/workflows/dependabot-auto-merge.yaml
+++ b/.github/workflows/dependabot-auto-merge.yaml
@@ -3,11 +3,9 @@ name: "Dependabot Auto Merge"
 on:
   workflow_run:
     types:
-      - completed
+      - "completed"
     workflows:
-      - 'Tests'
-      - 'Mutation Tests'
-      - 'Static Analyze'
+      - 'Test Suite'
 
 jobs:
   merge-me:
