--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     "ext-json": "*",
     "aeon-php/calendar": "^1.0",
     "aeon-php/sleep": ">=0.6.0",
-    "psr/cache": "^1.0",
+    "psr/cache": "^1.0|^2.0|^3.0",
     "symfony/polyfill-mbstring": "^1.0"
   },
   "require-dev": {
