--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,13 @@
     "require": {
         "php": "~8.1.10 || ~8.2",
         "ext-json": "*",
-        "aeon-php/calendar": "^1.0",
-        "aeon-php/sleep": "^1.0",
+        "aeon-php/calendar": "~1.0",
+        "aeon-php/sleep": "~1.0",
         "psr/cache": "^1.0|^2.0|^3.0",
         "symfony/polyfill-mbstring": "^1.0"
     },
     "require-dev": {
-        "symfony/cache": "^5.1"
+        "symfony/cache": "^5.1||^6.0"
     },
     "config": {
         "optimize-autoloader": true,
