--- a/composer.json
+++ b/composer.json
@@ -9,15 +9,15 @@
         "limiter"
     ],
     "require": {
-        "php": "~8.1.10 || ~8.2",
+        "php": "~8.1.10 || ~8.2.0 || ~8.3.0",
         "ext-json": "*",
         "aeon-php/calendar": "~1.0",
         "aeon-php/sleep": "~1.0",
-        "psr/cache": "^1.0|^2.0|^3.0",
-        "symfony/polyfill-mbstring": "^1.0"
+        "psr/cache": "~1.0|~2.0|~3.0",
+        "symfony/polyfill-mbstring": "~1.0"
     },
     "require-dev": {
-        "symfony/cache": "^5.1||^6.0"
+        "symfony/cache": "~5.4||~6.3||~7.0"
     },
     "config": {
         "optimize-autoloader": true,
